# boutique-ml

./: .gitignore  Dockerfile  README.md  process_data.py  pyproject.toml
data/processed/: daily_metrics.csv  price_metrics.csv  product_metrics.csv  seasonal_metrics.csv
data/raw/: sales_data.csv
models/: sales_forecast_model.joblib
notebooks/: eda.ipynb
src/api/: main.py
src/data/: data_processing.py
src/models/: train_model.py
