[tool.poetry]
name = "boutique-ml"
version = "0.1.0"
description = ""
authors = ["Ilyas Assylbekov <135857875+ilyas-assylbekov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.2"
datetime = "^5.5"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
plotly = "^6.0.0"
lightgbm = "^4.5.0"
scikit-learn = "^1.6.1"
joblib = "^1.4.2"
fastapi = "^0.115.8"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
